<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.caesar_84.retrofitlearning.HeroDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/ivAvatar"
            android:contentDescription="@string/avatarText"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:text="@string/labelName"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:id="@+id/tvName"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:text="@string/labelRealName"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:id="@+id/tvRealName"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:text="@string/labelTeam"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:id="@+id/tvTeam"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:text="@string/labelFirstAppeared"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:id="@+id/tvFirstAppeared"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:text="@string/labelCreatedBy"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:id="@+id/tvCreatedBy"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:text="@string/labelPublisher"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:id="@+id/tvPublisher"/>
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/labelBio"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
